--- a/msvc-items/msvc-items/src/main/resources/application.properties
+++ b/msvc-items/msvc-items/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=msvc-items
 server.port=8082
 
-spring.cloud.discovery.client.simple.instances.product-service[0].uri=http://localhost:8081
-spring.cloud.discovery.client.simple.instances.product-service[1].uri=http://localhost:9081
+#spring.cloud.discovery.client.simple.instances.msvc-products[0].uri=http://localhost:8081 -> LoadBalancer
+#spring.cloud.discovery.client.simple.instances.msvc-products[1].uri=http://localhost:9081 -> LoadBalancer
 
 config.baseurl.endpoint.msvc-products=http://msvc-products/products
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
