Implement config-server and Resilience4j in microservices

--- a/msvc-items/msvc-items/src/main/resources/application.properties
+++ b/msvc-items/msvc-items/src/main/resources/application.properties
@@ -4,6 +4,6 @@ server.port=8082
 #spring.cloud.discovery.client.simple.instances.msvc-products[0].uri=http://localhost:8081 -> LoadBalancer
 #spring.cloud.discovery.client.simple.instances.msvc-products[1].uri=http://localhost:9081 -> LoadBalancer
 
-config.baseurl.endpoint.msvc-products=http://msvc-products/products
+config.baseurl.endpoint.msvc-products=http://msvc-products
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
