--- a/msvc-items/msvc-items/pom.xml
+++ b/msvc-items/msvc-items/pom.xml
@@ -14,11 +14,20 @@
 
     <artifactId>msvc-items</artifactId>
     <version>1.0.0</version>
-
     <name>msvc-items</name>
     <description>Items microservice</description>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
