--- a/config-server/config-server/src/main/resources/application.properties
+++ b/config-server/config-server/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=config-server
 server.port=8888
 
+#spring.cloud.config.server.git.uri=file:///D:/dev/SpringCloud/config
+spring.cloud.config.server.git.uri=https://github.com/perronesebastian/msvc-items-config
 
