--- a/msvc-products/msvc-products/pom.xml
+++ b/msvc-products/msvc-products/pom.xml
@@ -17,6 +17,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.sebastian.springcloud.libs</groupId>
+            <artifactId>msvc-commons</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
